force-app/main/default/objects/Periodic_delete_queries__c/Periodic_delete_queries__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>NOTE: Check with IM before editing, as this can mass delete records without saving in the recycle bin! Each record contains a query that returns a collection of records to be deleted via scheduled apex.</description>
    <label>Periodic delete queries</label>
</CustomObject>