force-app/main/default/objects/Periodic_delete_queries__c/fields/Batch_size__c.field-meta.xml
<CustomField>
    <fullName>Batch_size__c</fullName>
    <defaultValue>10000</defaultValue>
    <description>The size of the batch used by the batch apex to make the deletes.  Default is 10,000.</description>
    <inlineHelpText>The size of the batch used by the batch apex to make the deletes.  Default is 10,000.</inlineHelpText>
    <label>Batch size</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>