force-app/main/default/objects/Periodic_delete_queries__c/fields/Hard_delete__c.field-meta.xml
<CustomField>
    <fullName>Hard_delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, then do a hard delete - that is, remove from the recycle bin immediately after deleting.</description>
    <inlineHelpText>If checked, then do a hard delete - that is, remove from the recycle bin immediately after deleting.</inlineHelpText>
    <label>Hard delete</label>
    <type>Checkbox</type>
</CustomField>