force-app/main/default/objects/Periodic_delete_queries__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>The query used to find records to delete</description>
    <inlineHelpText>The query used to find records to delete</inlineHelpText>
    <label>Query</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>